Updated links to Java web pages. Put Java mailing lists on mailing list page.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -115,7 +115,7 @@ from the "GNU C Compiler" to the "GNU Compiler Collection" and received
 a new <a href="gccmission.html">mission statement</a>.
 
 <p>Currently GCC contains front-ends for C, C++, Objective C, Chill,
-Fortran, and <a href="http://sources.redhat.com/java/">Java</A>
+Fortran, and <a href="java/">Java</A>
 as well as libraries for these languages (<a href="libstdc++/">libstdc++</a>,
 libgcj,...).
 </p>
@@ -153,6 +153,12 @@ hope to release by the end of Q1 2001.
 
 <dl>
 
+<dt><b>January 28, 2001</b></dt>
+<dd>
+The Java mailing lists and web pages have been moved to gcc.gnu.org.
+Now the gcj project is fully integrated into GCC.
+</dd>
+
 <dt><b>January 21, 2001</b></dt>
 <dd>
 Neil Booth has contributed <a
@@ -171,7 +177,7 @@ href="gcc-3.0/branch.html">stabilization for branching for GCC 3.0</a>.
 <dd>
 <dt><b>December 19, 2000</b></dt>
 <dd>
-The runtime library for the <a href="http://sources.redhat.com/java/">
+The runtime library for the <a href="java/">
 Java front-end</a>, <code>libgcj</code>, has been moved into the GCC 
 tree. This means that a separate download will no longer be required for 
 Java support.
