--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -45,6 +45,18 @@
   is the main discussion and development list for the standard C++
   library (libstdc++-v3).  Patches to libstdc++-v3 should be sent to
   both this list and <b>gcc-patches</b>.</li>
+
+  <li><b><a href="http://gcc.gnu.org/ml/java-announce/">java-announce</a></b>
+  is a low-volume, moderated, announcements-only list.</li>
+
+  <li><b><a href="http://gcc.gnu.org/ml/java/">java</a></b>
+  is the main discussion and development list for the Java language
+  front end to gcc, and the corresponding runtime library.</li>
+
+  <li><b><a href="http://gcc.gnu.org/ml/java-patches/">java-patches</a></b>
+  is a list for submission and discussion of patches to libgcj, the
+  Java runtime.  Patches to gcj, the Java language front end, should
+  go to <b>gcc-patches</b>.</li>
 </ul>
 
 <p>Read only lists:</p>
@@ -70,6 +82,14 @@
   <li><b><a href="http://gcc.gnu.org/ml/gcc-regression/">
   gcc-regression</a></b> is a read-only moderate volume list where regression
   results for the GCC compilers are posted.
+
+  <li><b><a href="http://gcc.gnu.org/ml/java-prs/">java-prs</a></b>
+  is a read-only list which tracks Java-related problem reports as
+  they are entered into our GNATS database.</li>
+
+  <li><b>java-cvs</b>
+  tracks checkins to the Java language compiler and runtime.  It is
+  not archived.</li>
 </ul>
 
 <p>Historical lists (archives only, no longer in use):</p>
@@ -82,16 +102,6 @@
 </ul>
 
 <p>To post a message, just send mail to <i>listname</i><tt>@gcc.gnu.org</tt>.
-
-<p>There are also some related lists <tt>@sources.redhat.com</tt> for
-the Java compiler:</p>
-
-<ul>
-
-<li><a href="http://sources.redhat.com/java/mail.html">GCJ mailing
-lists</a></li>
-
-</ul>
 
 <h2><a name="msgsize">Policies</a></h2>
 
@@ -142,6 +152,11 @@ lists via this form:
    <option value="gcc-regression">gcc-regression
    <option value="libstdc++">libstdc++
    <option value="libstdc++-cvs">libstdc++-cvs
+   <option value="java-announce">java-announce
+   <option value="java">java
+   <option value="java-patches">java-patches
+   <option value="java-prs">java-prs
+   <option value="java-cvs">java-cvs
   </select>
  <br>
   Your e-mail address:
