--- a/htdocs/frontends.html
+++ b/htdocs/frontends.html
@@ -10,7 +10,7 @@
 <p>Currently the main GCC distribution contains front-ends for C
 (gcc), C++ (g++), Objective C, Chill (unmaintained),
 Fortran (g77), and Java (<a
-href="http://sources.redhat.com/java/">GCJ</A>).</p>
+href="java/">GCJ</A>).</p>
 
 <p>There are several more front-ends for different languages that have
 been written for GCC but not yet integrated into the main distribution
