more java updates. Clarified meaning of java lists

--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -47,7 +47,9 @@
   both this list and <b>gcc-patches</b>.</li>
 
   <li><b><a href="http://gcc.gnu.org/ml/java-announce/">java-announce</a></b>
-  is a low-volume, moderated, announcements-only list.</li>
+  is a low-volume, moderated, announcements-only list.  Only announcements
+  related to the Java language front end or runtime library are posted
+  here.</li>
 
   <li><b><a href="http://gcc.gnu.org/ml/java/">java</a></b>
   is the main discussion and development list for the Java language
@@ -85,11 +87,13 @@
 
   <li><b><a href="http://gcc.gnu.org/ml/java-prs/">java-prs</a></b>
   is a read-only list which tracks Java-related problem reports as
-  they are entered into our GNATS database.</li>
+  they are entered into our GNATS database.  Messages sent here are
+  also sent to <b>gcc-prs</b>.</li>
 
   <li><b>java-cvs</b>
   tracks checkins to the Java language compiler and runtime.  It is
-  not archived.</li>
+  not archived.  Messages sent here are also sent to
+  <b>gcc-cvs</b>.</li>
 </ul>
 
 <p>Historical lists (archives only, no longer in use):</p>
