Clarify policy for the java-patches list.

--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -58,7 +58,7 @@
   <li><b><a href="http://gcc.gnu.org/ml/java-patches/">java-patches</a></b>
   is a list for submission and discussion of patches to libgcj, the
   Java runtime.  Patches to gcj, the Java language front end, should
-  go to <b>gcc-patches</b>.</li>
+  go to both this list and <b>gcc-patches</b>.</li>
 </ul>
 
 <p>Read only lists:</p>
