Fix typo in last change.

--- a/htdocs/c99status.html
+++ b/htdocs/c99status.html
@@ -305,7 +305,7 @@ pragmas.</li>
 
 <li>The extra definitions in <code>&lt;float.h&gt;</code> (of
 <code>FLT_EVAL_METHOD</code> and <code>DECIMAL_DIG</code>) are
-included most versions of <code>&lt;float.h&gt;</code>, but not yet
+included in most versions of <code>&lt;float.h&gt;</code>, but not yet
 <code>float-c4x.h</code>, <code>float-m68k.h</code> or
 <code>float-vax.h</code>.</li>
 
