2001-02-05  Phil Edwards  <pme@sources.redhat.com>
	* index.html:  Fix link broken from the onlinedocs move.

--- a/htdocs/libstdc++/index.html
+++ b/htdocs/libstdc++/index.html
@@ -3,7 +3,7 @@
  <META NAME="KEYWORDS" CONTENT="libstdc++, homepage, home, g++, libg++, STL">
  <TITLE>Standard C++ Library v3</TITLE>
 <LINK REL=StyleSheet HREF="lib3styles.css">
-<!-- $Id: index.html,v 1.7 2000/11/29 21:13:54 pme Exp $ -->
+<!-- $Id: index.html,v 1.8 2000/12/03 23:35:09 jsm28 Exp $ -->
 </HEAD>
 <BODY>
 
@@ -62,7 +62,8 @@
  <DT>1998-10-30
  <DD> Third snapshot release, libstdc++-2.90.2.tar.gz.
  <DT>1998-07-31
- <DD> <A HREF="17_intro/DESIGN">Design document available</a>
+ <DD><A HREF="http://gcc.gnu.org/onlinedocs/libstdc++/17_intro/DESIGN">Design
+     document available</a>
  <DT>1998-07-24
  <DD> Second snapshot release, libstdc++-2.90.1.tar.gz. 
  <DT>1998-07-15
