* contrib.html: Refer to new page. 	* test.html: New file.

--- a/htdocs/java/contrib.html
+++ b/htdocs/java/contrib.html
@@ -195,7 +195,7 @@ projects</a>.
 <table border="0" cellpadding="4" width="95%">
 <tr bgcolor="#b0d0ff">
  <th align="left">
-  Contributing test cases
+  Testing
  </th>
 </tr>
 </table>
@@ -218,6 +218,12 @@ projects</a>.
 
   <li>Send the patch to java-patches and then commit of you're allowed to.
 </ul>
+
+<p>
+
+There is also some documentation on <a href="test.html">how to run
+test cases</a>.  This covers both our built-in tests and extra test
+suites we use.
 
 </td></tr>
 </table>
