* test.html: Fixed Jacks link.

--- a/htdocs/java/test.html
+++ b/htdocs/java/test.html
@@ -31,7 +31,7 @@ tests like so: <tt>make MAUVEDIR=~/mauve check</tt>.<p>
 <br>
 
 The <a
-href="http://oss.software.ibm.com/developerworks/opensource/cvs/jikes/~checkout~/jacks/jacks.html">Jacks</a>
+href="http://oss.software.ibm.com/developerworks/opensource/jacks/">Jacks</a>
 project exists to create a test suite for Java compilers.  We
 encourage developers to contribute test cases to Jacks.<p>
 
