* build-snapshot.html: Replace redundant <body> tags. Fix 	<tr bgcolor="..."> tags. 	* compile.html: Add <body>, </body>, and </html>. Remove 	<!--#include virtual...>. 	* contrib.html: Add <head> and <body> tags. 	* docs.html: Ditto. 	* done.html: Add </body> and </html>. Remove superflous <h2> and 	<!--#include virtual=...>.

--- a/htdocs/java/build-snapshot.html
+++ b/htdocs/java/build-snapshot.html
@@ -1,10 +1,10 @@
 <html>
+
 <head>
 <title>How to build GCJ/LIBGCJ from snapshots or cvs</title>
 </head>
-<body bgcolor="white" text="black" link="#0000EE" VLINK="#551A8B" ALINK="red">
 
-<body bgcolor="#FFFFFF">
+<body>
 
 <table border="0" cellpadding="4" width="95%">
         <tr bgcolor="#b0d0ff"> 
@@ -14,7 +14,7 @@
         </tr>
 
 
-<tr bgcolor="cccccc">
+<tr bgcolor="#cccccc">
 <td>
 <pre>
 General gcj download information can be found <A HREF="download.html">here</A>.
@@ -36,7 +36,7 @@ you get Libgc from an other cvs or snapshot repository.
 </td>
 </tr>
 
-<tr bgcolor="dddddd">
+<tr bgcolor="#dddddd">
 <td>
 <pre>
 2. Make a compile directory
@@ -46,7 +46,7 @@ you get Libgc from an other cvs or snapshot repository.
 </td>
 </tr>
 
-<tr bgcolor="cccccc">
+<tr bgcolor="#cccccc">
 <td>
 <pre>
 3. Move the snapshot into the compile dir, e.g.
@@ -60,7 +60,7 @@ you get Libgc from an other cvs or snapshot repository.
 </td>
 </tr>
 
-<tr bgcolor="dddddd">
+<tr bgcolor="#dddddd">
 <td>
 <pre>
 4. Tell the build system you want to build libgcj
@@ -74,7 +74,7 @@ you get Libgc from an other cvs or snapshot repository.
   configuring.
 </pre></td></tr>
 
-<tr bgcolor="cccccc">
+<tr bgcolor="#cccccc">
 <td>
 <pre>
 5. Compile and install gcc/gcj/libgcj
@@ -106,7 +106,7 @@ HAVE_GAS_HIDDEN after configuring, but before typeing make.  See
 </td>
 </tr>
 
-<tr bgcolor="dddddd">
+<tr bgcolor="#dddddd">
 <td>
 <pre>
 6. Adjust your environment
@@ -123,7 +123,7 @@ setenv LD_LIBRARY_PATH /home/joerg/gcc/lib
 </td>
 </tr>
 
-<tr bgcolor="cccccc">
+<tr bgcolor="#cccccc">
 <td>
 <pre>
 7. Edit a file HelloWorld.java
@@ -137,7 +137,7 @@ setenv LD_LIBRARY_PATH /home/joerg/gcc/lib
 </td>
 </tr>
 
-<tr bgcolor="dddddd">
+<tr bgcolor="#dddddd">
 <td>
 <pre>
 8. Compile and run HelloWorld
@@ -153,4 +153,3 @@ setenv LD_LIBRARY_PATH /home/joerg/gcc/lib
 
 </body>
 </html>
-
