--- a/htdocs/java/compile.html
+++ b/htdocs/java/compile.html
@@ -1,8 +1,10 @@
 <html>
+
 <head>
 <title>Compiling with GCJ</title>
 </head>
-<!--#include virtual="/include/header-subpages.html"-->
+
+<body>
 
 <h2 align=center>Compiling with GCJ</h2>
 
@@ -156,4 +158,5 @@ directories or file names.</dd>
   Java run-time libraries (libgcj, and possibly others).
 </ul>
 
-<!--#include virtual="/include/footer-subpages.html"-->
+</body>
+</html>
