--- a/htdocs/java/contrib.html
+++ b/htdocs/java/contrib.html
@@ -1,6 +1,10 @@
 <html>
+
+<head>
 <title>GCJ - Contibuting</title>
-<body bgcolor="white">
+</head>
+
+<body>
 
 <table border=0>
 <tr><td valign="top">
