--- a/htdocs/java/docs.html
+++ b/htdocs/java/docs.html
@@ -1,6 +1,10 @@
 <html>
+
+<head>
 <title>GCJ - Documentation</title>
-<body bgcolor="white">
+</head>
+
+<body>
 
 <table border=0>
 <tr><td valign="top">
@@ -160,6 +164,3 @@ conferences and magazines.
 
 </body>
 </html>
-
-
-
