--- a/htdocs/java/done.html
+++ b/htdocs/java/done.html
@@ -1,9 +1,11 @@
 <html>
+
 <head>
 <title>Done with GCJ</title>
 </head>
-<!--#include virtual="/include/header-subpages.html"-->
-<body bgcolor="#FFFFFF">
+
+<body>
+
 <table border=0>
   <tr>
     <td valign="top"> 
@@ -188,6 +190,6 @@
     </td>
   </tr>
 </table>
-<h2 align=center>&nbsp;</h2>
 
-    <!--#include virtual="/include/footer-subpages.html"-->
+</body>
+</html>
