* contrib.html, docs.html, done.html, download.html, 	faq-portugese.html, index.html, projects.html, support.html, 	thanks.html, tm.html: Updated gnats links.

--- a/htdocs/java/download.html
+++ b/htdocs/java/download.html
@@ -21,7 +21,7 @@
 <a href="build-snapshot.html">Build</a><br>
 <a href="contrib.html">Contributing</a><br>
 <a href="done.html">Done with Gcj</A><br>
-<a href="/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">Bugs</a><br>
+<a href="/cgi-bin/gnatsweb.pl?user=guest&amp;password=guest&amp;database=gcc&amp;cmd=login">Bugs</a><br>
 <a href="thanks.html">Thanks</a><br>
 <!-- <a href="support.html">Support</a><br> -->
 <br><br><br>
@@ -87,7 +87,7 @@ Note that the current development sources are generally for
 older, more stable, versions. Also note that the current development
 sources may have bugs which prevent it from compiling or running; 
 however, these things should be fixed immediately. Please
-<a href="/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">submit a problem report</a> if you are
+<a href="/cgi-bin/gnatsweb.pl?user=guest&amp;password=guest&amp;database=gcc&amp;cmd=login">submit a problem report</a> if you are
 using the development sources and run into such a problem.
 If you are going to build from source you want to read the
 <a href=faq.html#3_0>Build Issues FAQ</a>.
