--- a/htdocs/java/faq-portugese.html
+++ b/htdocs/java/faq-portugese.html
@@ -30,7 +30,7 @@
 <br><a href="build-snapshot.html">Build</a>
 <br><a href="contrib.html">Contributing</a>
 <br><a href="done.html">Done with Gcj</A>
-<br><a href="/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">Bugs</a>
+<br><a href="/cgi-bin/gnatsweb.pl?user=guest&amp;password=guest&amp;database=gcc&amp;cmd=login">Bugs</a>
 <br><a href="thanks.html">Thanks</a>
 <br><!-- <a href="support.html">Support</a><br> -->
 <br>&nbsp;
@@ -208,7 +208,7 @@ libgcj &eacute; distribu&iacute;do sob a licen&ccedil;a GPL.</dd>
 
 <dl>
 <dt>
-libgcj tem um&nbsp; <a href="/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">banco
+libgcj tem um&amp;nbsp; <a href="/cgi-bin/gnatsweb.pl?user=guest&amp;password=gcc&amp;database=java&cmd=login">banco
 de dados de bugs, Gnats,</a> correspondente que voc&ecirc; pode folhear.
 Voc&ecirc; tamb&eacute;m pode submeter um novo bug a partir da p&aacute;gina
 do Gnats.
