* faq-portugese.html, faq.html, gcj2.html, libgcj-platforms.html, 	libgcj2.html: Remove `#include virtual'.
	* contrib.html, docs.html, done.html, download.html,
	faq-portugese.html, faq.html, index.html, projects.html,
	thanks.html, tm.html: Use navigation bar from style.mhtml.

	* download.html, faq-portugese.html: Use absolute link for gnatsweb.

	* support.html: Removed.

--- a/htdocs/java/download.html
+++ b/htdocs/java/download.html
@@ -2,44 +2,7 @@
 <title>GCJ - Downloading</title>
 <body bgcolor="white">
 
-<table border=0>
-<tr><td valign="top">
-
-<table border=0>
-<tr><td>
-<img src="gcj.jpg" alt="gcj logo" width=136 height=98>
-</td></tr>
-<tr>
-<td>
-<br>
-<table border=0><tr><td width="10"></td><td>
-<a href="index.html">Home</a><br>
-<a href="faq.html">FAQ</a><br>
-<a href="mail.html">Mailing Lists</a><br>
-<a href="docs.html">Documentation</a><br>
-<a href="download.html">Download</a><br>
-<a href="build-snapshot.html">Build</a><br>
-<a href="contrib.html">Contributing</a><br>
-<a href="done.html">Done with Gcj</A><br>
-<a href="/cgi-bin/gnatsweb.pl?user=guest&amp;password=guest&amp;database=gcc&amp;cmd=login">Bugs</a><br>
-<a href="thanks.html">Thanks</a><br>
-<!-- <a href="support.html">Support</a><br> -->
-<br><br><br>
-<a href="http://gcc.gnu.org">GCC</a><br>
-<a href="http://sources.redhat.com/mauve">The Mauve Project</a><br>
-<a href="http://www.gnu.org">The GNU Project</a><br>
-</td></tr></table>
-</td></tr></table>
-
-</td>
-
-<td width=2 bgcolor="black">
-i
-</td>
-<td width=6>
-</td>
-
-<td>
+<GCJNAV>
 
 <br><br>
 <h1>Downloading GCJ</h1>
@@ -87,7 +50,7 @@ Note that the current development sources are generally for
 older, more stable, versions. Also note that the current development
 sources may have bugs which prevent it from compiling or running; 
 however, these things should be fixed immediately. Please
-<a href="/cgi-bin/gnatsweb.pl?user=guest&amp;password=guest&amp;database=gcc&amp;cmd=login">submit a problem report</a> if you are
+<a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?user=guest&amp;password=guest&amp;database=gcc&amp;cmd=login">submit a problem report</a> if you are
 using the development sources and run into such a problem.
 If you are going to build from source you want to read the
 <a href=faq.html#3_0>Build Issues FAQ</a>.
@@ -239,9 +202,7 @@ for more details on downloading and using this release.</td>
 </table>
 -------------------------------------->
 
-
-</td></tr>
-</table>
+</GCJNAV>
 
 </body>
 </html>
