--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -2,59 +2,7 @@
 <title>GCJ - Home Page</title>
 <body bgcolor="white">
 
-<table border=0>
-<tr><td valign="top">
-
-<table border=0>
-<tr><td>
-<img src="gcj.jpg" alt="gcj logo" width=136 height=98>
-</td></tr>
-<tr>
-<td valign>
-<br>
-<table border=0><tr><td width="10"></td><td>
-<a href="index.html">Home</a><br>
-<a href="faq.html">FAQ</a><br>
-<a href="mail.html">Mailing Lists</a><br>
-<a href="docs.html">Documentation</a><br>
-<a href="download.html">Download</a><br>
-<a href="build-snapshot.html">Build</a><br>
-<a href="contrib.html">Contributing</a><br>
-<a href="done.html">Done with Gcj</A><br>
-<a href="/cgi-bin/gnatsweb.pl?user=guest&amp;password=guest&amp;database=gcc&amp;cmd=login">Bugs</a><br>
-<a href="thanks.html">Thanks</a><br>
-<!-- <a href="support.html">Support</a><br> -->
-<br><br><br>
-<a href="http://gcc.gnu.org">GCC</a><br>
-<a href="http://sources.redhat.com/mauve">The Mauve Project</a><br>
-<a href="http://www.gnu.org">The GNU Project</a><br>
-</td></tr></table>
-<br><br><br>
-<table border=0><tr><td width="10"></td><td>
-<small>
-<form method="get" action="/cgi-bin/ml-request">
-Get our announcements:<br>
-<input type="hidden" name="digest" value="off">
-<input type="hidden" name="operation" value="subscribe">
-<input type="hidden" name="listname" value="java-announce">
-<input type="text" name="username" value="your e-mail-address" size="20">
-<br>
-<input type="Submit" name="submit" value="Subscribe!">
-</form>
-</small>
-</td></tr></table>
-
-</td></tr></table>
-
-</td>
-
-<td width=2 bgcolor="black">
-i
-</td>
-<td width=6>
-</td>
-
-<td>
+<GCJNAV>
 
 <br><br>
 <h1>The GNU Compiler for the Java<sup><a href="tm.html"><small>tm</small></a></sup> Programming Language</h1>
@@ -232,8 +180,7 @@ href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.
 
 <!-- They are part of the <a href="http://www.gnu.org">GNU Project</a>, and released under the aegis of GNU.-->
 
-</td></tr>
-</table>
+</GCJNAV>
 
 </body>
 </html>
