--- a/htdocs/java/contrib.html
+++ b/htdocs/java/contrib.html
@@ -6,44 +6,7 @@
 
 <body>
 
-<table border=0>
-<tr><td valign="top">
-
-<table border=0>
-<tr><td>
-<img src="gcj.jpg" alt="gcj logo" width=136 height=98>
-</td></tr>
-<tr>
-<td>
-<br>
-<table border=0><tr><td width="10"></td><td>
-<a href="index.html">Home</a><br>
-<a href="faq.html">FAQ</a><br>
-<a href="mail.html">Mailing Lists</a><br>
-<a href="docs.html">Documentation</a><br>
-<a href="download.html">Download</a><br>
-<a href="build-snapshot.html">Build</a><br>
-<a href="contrib.html">Contributing</a><br>
-<a href="done.html">Done with Gcj</A><br>
-<a href="/cgi-bin/gnatsweb.pl?user=guest&amp;password=guest&amp;database=gcc&amp;cmd=login">Bugs</a><br>
-<a href="thanks.html">Thanks</a><br>
-<!-- <a href="support.html">Support</a><br> -->
-<br><br><br>
-<a href="http://gcc.gnu.org">GCC</a><br>
-<a href="http://sources.redhat.com/mauve">The Mauve Project</a><br>
-<a href="http://www.gnu.org">The GNU Project</a><br>
-</td></tr></table>
-</td></tr></table>
-
-</td>
-
-<td width=2 bgcolor="black">
-i
-</td>
-<td width=6>
-</td>
-
-<td>
+<GCJNAV>
 
 <br><br>
 <h1>Contributing to the GCJ Project</h1>
@@ -229,8 +192,7 @@ There is also some documentation on <a href="test.html">how to run
 test cases</a>.  This covers both our built-in tests and extra test
 suites we use.
 
-</td></tr>
-</table>
+</GCJNAV>
 
 </body>
 </html>
