--- a/htdocs/java/faq.html
+++ b/htdocs/java/faq.html
@@ -2,46 +2,12 @@
 <head>
 <title>The GCJ FAQ</title>
 </head>
-<!--#include virtual="/include/header-subpages.html"-->
+
 <body bgcolor="#FFFFFF">
-<table border=0>
-  <tr>
-    <td valign="top"> 
-      <table border=0>
-        <tr>
-          <td> <img src="gcj.jpg" alt="gcj logo" width=136 height=98> </td>
-        </tr>
-        <tr> 
-          <td> <br>
-            <table border=0>
-              <tr>
-                <td width="10"></td>
-                <td> <a href="index.html">Home</a><br>
-                  <a href="faq.html">FAQ</a><br>
-                  <a href="mail.html">Mailing Lists</a><br>
-                  <a href="docs.html">Documentation</a><br>
-                  <a href="download.html">Download</a><br>
-		  <a href="build-snapshot.html">Build</a><br>
-                  <a href="contrib.html">Contributing</a><br>
-		  <a href="done.html">Done with Gcj</A><br>
-                  <a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?user=guest&amp;password=guest&amp;database=gcc&amp;cmd=login">Bugs</a><br>
-                  <a href="thanks.html">Thanks</a><br>
-                  <!-- <a href="support.html">Support</a><br> --> <br>
-                  <br>
-                  <br>
-                  <a href="http://gcc.gnu.org">GCC</a><br>
-                  <a href="http://sources.redhat.com/mauve">The Mauve Project</a><br>
-                  <a href="http://www.gnu.org">The GNU Project</a><br>
-                </td>
-              </tr>
-            </table>
-          </td>
-        </tr>
-      </table>
-    </td>
-    <td width=2 bgcolor="black"> i </td>
-    <td width=6> </td>
-    <td> <br>
+
+<GCJNAV>
+
+ <br>
       <br>
       <h1>The GCJ FAQ</h1>
       <p>The latest version of this document is always available at <a href="faq.html">http://gcc.gnu.org/java/faq.html</a>.</p>
@@ -774,10 +740,8 @@ $ ../configure [...]
         </p>
         <p>The primary source of documentation for CNI is at <a href="papers/cni/t1.html">http://gcc.gnu.org/java/papers/cni/t1.html</a></p>
       </blockquote>
-    </td>
-  </tr>
-</table>
+
+</GCJNAV>
+
 <hr>
 <h2 align=center>&nbsp;</h2>
-
-    <!--#include virtual="/include/footer-subpages.html"-->
