--- a/htdocs/java/tm.html
+++ b/htdocs/java/tm.html
@@ -2,52 +2,14 @@
 <title>GCJ - About</title>
 <body bgcolor="white">
 
-<table border=0>
-<tr><td valign="top">
-
-<table border=0>
-<tr><td>
-<img src="gcj.jpg" alt="gcj logo" width=136 height=98>
-</td></tr>
-<tr>
-<td>
-<br>
-<table border=0><tr><td width="10"></td><td>
-<a href="index.html">Home</a><br>
-<a href="faq.html">FAQ</a><br>
-<a href="mail.html">Mailing Lists</a><br>
-<a href="docs.html">Documentation</a><br>
-<a href="download.html">Download</a><br>
-<a href="build-snapshot.html">Build</a><br>
-<a href="contrib.html">Contributing</a><br>
-<a href="done.html">Done with Gcj</A><br>
-<a href="/cgi-bin/gnatsweb.pl?user=guest&amp;password=guest&amp;database=gcc&amp;cmd=login">Bugs</a><br>
-<a href="thanks.html">Thanks</a><br>
-<!-- <a href="support.html">Support</a><br> -->
-<br><br><br>
-<a href="http://gcc.gnu.org">GCC</a><br>
-<a href="http://sources.redhat.com/mauve">The Mauve Project</a><br>
-<a href="http://www.gnu.org">The GNU Project</a><br>
-</td></tr></table>
-</td></tr></table>
-
-</td>
-
-<td width=2 bgcolor="black">
-i
-</td>
-<td width=6>
-</td>
-
-<td>
+<GCJNAV>
 
 Java and all Java-based marks are trademarks or registered trademarks
 of Sun Microsystems, Inc. in the United States and other countries.
 The Free Software Foundation, Cygnus Solutions and Red Hat are
 independent of Sun Microsystems, Inc.
 
-</td></tr>
-</table>
+</GCJNAV>
 
 </body>
 </html>
