* download.html: Add <head> tags. Remove bgcolor from <body> and 	an extraneous line. 	* thanks.html:  Ditto. 	* gcj2.html: Add <body> and </html> tags.

--- a/htdocs/java/download.html
+++ b/htdocs/java/download.html
@@ -1,6 +1,10 @@
 <html>
+
+<head>
 <title>GCJ - Downloading</title>
-<body bgcolor="white">
+</head>
+
+<body>
 
 <GCJNAV>
 
@@ -200,7 +204,6 @@ for more details on downloading and using this release.</td>
 </tr>
 
 </table>
--------------------------------------->
 
 </GCJNAV>
 
