--- a/htdocs/java/gcj2.html
+++ b/htdocs/java/gcj2.html
@@ -1,7 +1,10 @@
 <html>
+
 <head>
 <title>The GCJ home page</title>
 </head>
+
+<body>
 
 <h2 align=center>The GCJ home page</h2>
 
@@ -94,3 +97,6 @@ easy to try a small Java program of your own:
   and other countries. The Free Software Foundation, Cygnus Solutions, 
   and Red Hat are independent of Sun Microsystems, Inc.
 </blockquote>
+
+</body>
+</html>
