--- a/htdocs/java/download.html
+++ b/htdocs/java/download.html
@@ -4,7 +4,7 @@
 <title>GCJ - Downloading</title>
 </head>
 
-<body>
+<body bgcolor="white">
 
 <GCJNAV>
 
@@ -20,21 +20,23 @@
 </table>
 <br>
 
-The current source release is <b>still</b> provided in two parts: the
-compiler, gcj, and the runtime, libgcj. Some time in the future, a
-single source release of gcc will contain everything you need.
+The most current official release of GCJ/libgcj is 2.95.1. It's
+broken, and we don't recommend using it. Some time soon, GCC 3.0 
+will contain everything you need in a single source release.
 <p>
-Gcj is part of the Gnu Compiler Collection, GCC.  Follow the links on
-<a href="http://gcc.gnu.org/releases.html">http://gcc.gnu.org/releases.html</a>
+We now recommend that you obtain development sources (see below), in
+preference to the old release version.
+<!---
+<p>
+Follow the links on <a href="http://gcc.gnu.org/releases.html">http://gcc.gnu.org/releases.html</a>
 to download the compiler.  You will need either the full distribution,
 or each of the Core Compiler, C++ and Java distributions.
 <p>
-The most current official release of libgcj is 2.95.1. It's
-broken. Don't use it. For the records we'll just say it's available
+libgcj 2.95.1 is available
 from <a href="ftp://sources.redhat.com/pub/java/libgcj-2.95.1.tar.gz">
-ftp://sources.redhat.com/pub/java/libgcj-2.95.1.tar.gz</a>, but you
-haven't heard that from us.
-
+ftp://sources.redhat.com/pub/java/libgcj-2.95.1.tar.gz</a> (but you
+haven't heard that from us).
+-->
 <p>
 <table border="0" cellpadding="4" width="95%">
 <tr bgcolor="#b0d0ff">
@@ -46,14 +48,12 @@ haven't heard that from us.
 <br>
 
 The latest development sources are available in three forms: periodic
-snapshots, prebuild RPMs and directly from the cvs source repository.
+snapshots, pre-built RPMs and directly from the cvs source repository.
 
 <p>
-Note that the current development sources are generally for
-"bleeding edge" developers, and those who need features not found in 
-older, more stable, versions. Also note that the current development
-sources may have bugs which prevent it from compiling or running; 
-however, these things should be fixed immediately. Please
+Please note that the current development source tree may occasionally have 
+bugs which prevent it from compiling or running; however, when these problems 
+occur we try to fix them immediately. Please
 <a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?user=guest&amp;password=guest&amp;database=gcc&amp;cmd=login">submit a problem report</a> if you are
 using the development sources and run into such a problem.
 If you are going to build from source you want to read the
@@ -77,22 +77,10 @@ disc 2.
 </UL>
 <p>
 
-RPMs are also made available occasionally by Anthony Green.  The are available from
-<a href="ftp://sources.redhat.com/pub/java/rpm/">ftp://sources.redhat.com/pub/java/rpm/</a>
-and <a href=http://sources.redhat.com/mirrors.html>Mirror Sites</a>.
-<p>
-Everything will install under /usr/local/ag.  The source RPM unpacks
-as a checked out anonymous source tree  with GCC and libgcj unified
-under a single root. 
-Debian users can use <code>alien --to-deb</code> to convert the rpms.
-<p>
-You have to add <code>/usr/local/ag/bin</code> to your <code>PATH</code>
-and add <code>/usr/local/ag/lib</code> to your <code>LD_LIBRARY_PATH</code>.
-
 <a name=cvs>
 <h3>cvs</h3> 
 
-The easiest way to get libgcj is to check it out from the gcc cvs
+The easiest way to get GCJ is to check it out from the GCC cvs
 repository. Here's how perform an anonymous <A
 HREF="http://gcc.gnu.org/cvs.html">read-only</A> CVS access:
 
@@ -127,81 +115,6 @@ Here's the Java front end <a
 href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/java">cvs
 archive</a> (the entire compiler is also 
 <a href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc">available</a>.)
-
-<!----------------------------------
-
-<p>
-
-<table border="0" cellpadding="4" width="95%">
-<tr bgcolor="#b0d0ff">
- <th align="left">
- Development tree status
- </th>
-</tr>
-</table>
-<br>
-
-Several versions of gcj/libgcj from the CVS tree are known to work in
-various configurations. Other versions are also known to have bugs. The
-following tables list, for each architecture, recent reports of 
-success/failure with GCJ versions other than the stable release.
-
-<p> 
-If you are successfully using a GCJ release other than the stable one,
-please email <a href="mailto:java@gcc.gnu.org">the 
-GCJ Discussion mailing list</a> to report it. Thanks!
-
-
-<p>
-<table border="0" cellpadding="4" cellspacing="4" fgcolor="#ff0000" rules="all" width="90%">
-<tr>
-<td align="left" bgcolor="#b0ffd0" colspan="5">
-<b>Linux x86</b>
-</td>
-<tr bgcolor="#d0d0d0" valign=top>
-
-<td>GCJ version</td>
-<td>libgcj version</td>
-<td>Notes</td>
-<td>Reported by</td>
-<td>Date</td>
-</tr>
-
-<tr valign=top>
-<td>gcc-2.95.2 with <a href="http://waitaki.otago.ac.nz/~bryce/gcj/">patches from Bryce McKinlay</a></td>
-<td>libgcj from CVS from March 02, 2000 00:00:00
-(Newer versions do not work with gcc-2.95.2 due to later
-changes to libgcj to support throw/catch in CNI.)
-</td>
-<td>Trying to use this to get gij/interpreter support with stable gcj.
-<p>Some bugs with threads, still working on fixing them</td>
-<td><a href="mailto:mdw@cs.berkeley.edu">Matt Welsh</a></td>
-<td>March 21, 2000</td>
-</tr>
-
-<tr valign=top>
-<td>gcc-2.95.2 with <a href="http://waitaki.otago.ac.nz/~bryce/gcj/">patches from Bryce McKinlay</a></td>
-<td>libgcj from CVS from November 4, 1999</td>
-</td>
-<td>This version of libgcj does not have complete gij support, but it
-is very stable. I have seen strange bugs in the interface method dispatch
-routines with multithreaded code, however, newer versions of libgcj have
-revamped the interface dispatch routines, so it's probably not worth fixing.
-<p>This is the version used by Jaguar. See
-<a href="http://www.cs.berkeley.edu/~mdw/proj/jaguar/">this web page</a>
-for more details on downloading and using this release.</td>
-<td><a href="mailto:mdw@cs.berkeley.edu">Matt Welsh</a></td>
-<td>March 21, 2000</td>
-</tr>
-
-<tr valign=top>
-<td>gcj from CVS from June 6, 2000</td>
-<td>libgcj from CVS from June 6, 2000</td>
-</td>
-<td>This combination supports compiling inner classes from java source.</td>
-<td><a href="mailto:mark@klomp.org">Mark Wielaard</a></td>
-<td>June 12, 2000</td>
-</tr>
 
 </table>
 
