--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -22,7 +22,7 @@ Programming Language.  It can compile:
 <li>and Java bytecode to native machine code.
 </ul>
 
-Compliled applications are linked with the GCJ runtime, <code>libgcj</code>, 
+Compiled applications are linked with the GCJ runtime, <code>libgcj</code>, 
 which provides the core <A HREF="http://www.gnu.org/software/classpath/">
 class libraries</A>, a garbage collector, and a bytecode
 interpreter. <code>libgcj</code> can dynamically load and interpret 
