--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -36,6 +36,7 @@
 <P>
 <A HREF="http://gcc.gnu.org/cgi-bin/fom">FAQ</A><BR>
 <A HREF="install/index.html">Installation</A><BR>
+<A HREF="install/specific.html">Platforms</A><BR>
 <A HREF="onlinedocs/">Manual</A><BR>
 <A HREF="readings.html">Readings</A>
 </P>
