Add projects-for-beginners page

--- a/htdocs/projects/index.html
+++ b/htdocs/projects/index.html
@@ -9,7 +9,10 @@
 
 <p>You can investigate bugs in our <a href="../gnats.html">GNATS
 database</a> and attempt to fix them or see whether they still are
-present in current GCC.</p>
+present in current GCC.
+
+<p>If you are new to GCC, start with our <a
+href="beginner.html">projects for beginners</a>.
 
 <p>There is a separate page for <a
 href="bp/main.html">Bounds Checking with Bounded Pointers</a>.
