Monthly update.  Entries for Java mailing lists.

--- a/htdocs/search.html
+++ b/htdocs/search.html
@@ -48,11 +48,11 @@ The search will include what you marked below and
 <option selected value="">
 if nothing is marked, all pages.
 <!-- Small pattern that matches all mailing lists.  -->
-<option value="/ml/g|/ml/l">
+<option value="/ml/g|/ml/l|/ml/j">
 all mailing lists.
 <!-- By not mentioning (.or)g/ml for the mailing lists, we exclude them
      and "restrict" to everything else.  Since we're in a restrict
-     field; that's the best we can do.  -->
+     field, that's the best we can do.  -->
 <option
 value="g/a|g/b|g/c|g/d|g/e|g/f|g/g|g/h|g/i|g/j|g/l|g/mi|g/n|g/o|g/p|g/r|g/s|g/t|g/w">
 all web pages.
@@ -120,6 +120,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
      this page is checked into CVS, which adds a level of complexity that
      is not currently handled well.  -->
 <td><select name=restrict multiple size=6>
+<option value="gcc/2001-02">Feb 2001
 <option value="gcc/2001-01">Jan 2001
 <option value="gcc/2000-12">Dec 2000
 <option value="gcc/2000-11">Nov 2000
@@ -163,6 +164,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc/1997-09">Sep 1997
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-bugs/2001-02">Feb 2001
 <option value="gcc-bugs/2001-01">Jan 2001
 <option value="gcc-bugs/2000-12">Dec 2000
 <option value="gcc-bugs/2000-11">Nov 2000
@@ -206,6 +208,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-bugs/1997-09">Sep 1997
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-patches/2001-02">Feb 2001
 <option value="gcc-patches/2001-01">Jan 2001
 <option value="gcc-patches/2000-12">Dec 2000
 <option value="gcc-patches/2000-11">Nov 2000
@@ -241,6 +244,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-patches/1998-05">May 1998
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-help/2001-02">Feb 2001
 <option value="gcc-help/2001-01">Jan 2001
 <option value="gcc-help/2000-12">Dec 2000
 <option value="gcc-help/2000-11">Nov 2000
@@ -261,6 +265,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-help/1999-q3">Jul-Sep 1999
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-cvs/2001-02">Feb 2001
 <option value="gcc-cvs/2001-01">Jan 2001
 <option value="gcc-cvs/2000-12">Dec 2000
 <option value="gcc-cvs/2000-11">Nov 2000
@@ -296,6 +301,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-cvs/1998-05">May 1998
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-testresults/2001-02">Feb 2001
 <option value="gcc-testresults/2001-01">Jan 2001
 <option value="gcc-testresults/2000-12">Dec 2000
 <option value="gcc-testresults/2000-11">Nov 2000
@@ -344,6 +350,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 </tr>
 <tr align=left>
 <td><select name=restrict multiple size=6>
+<option value="gcc-regression/2001-02">Feb 2001
 <option value="gcc-regression/2001-01">Jan 2001
 <option value="gcc-regression/2000-12">Dec 2000
 <option value="gcc-regression/2000-11">Nov 2000
@@ -394,6 +401,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 </tr>
 <tr align=left>
 <td><select name=restrict multiple size=6>
+<option value="libstdc++/2001-02">Feb 2001
 <option value="libstdc++/2001-01">Jan 2001
 <option value="libstdc++/2000-12">Dec 2000
 <option value="libstdc++/2000-11">Nov 2000
@@ -425,6 +433,73 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="libstdc++-prs/2000-q1">Jan-Mar 2000
 <option value="libstdc++-prs/1999-q4">Oct-Dec 1999
 <option value="libstdc++-prs/1999-q3">Jul-Sep 1999
+</select></td>
+</tr>
+
+<tr align=left>
+<th>
+<input type=checkbox name=restrict value="/ml/java/">
+<font size=-1> java</font>
+</th>
+<th>
+<input type=checkbox name=restrict value="/ml/java-patches/">
+<font size=-1> ...-patches</font>
+</th>
+<th>
+<input type=checkbox name=restrict value="/ml/java-prs/">
+<font size=-1> ...-prs</font>
+</th>
+<th>
+<input type=checkbox name=restrict value="/ml/java-announce/">
+<font size=-1> ...-announce</font>
+</th>
+</tr>
+<tr align=left>
+<td><select name=restrict multiple size=6>
+<option value="java/2001-02">Feb 2001
+<option value="java/2001-01">Jan 2001
+<option value="java/2000-12">Dec 2000
+<option value="java/2000-11">Nov 2000
+<option value="java/2000-10">Oct 2000
+<option value="java/2000-09">Sep 2000
+<option value="java/2000-08">Aug 2000
+<option value="java/2000-07">Jul 2000
+<option value="java/2000-06">Jun 2000
+<option value="java/2000-05">May 2000
+<option value="java/2000-04">Apr 2000
+<option value="java/2000-q1">Jan-Mar 2000
+<option value="java/1999-q4">Oct-Dec 1999
+<option value="java/1999-q3">Jul-Sep 1999
+<option value="java/1999-q2">Apr-Jun 1999
+<option value="java/1999-q1">Jan-Mar 1999
+<option value="java/1998-12">Dec 1998
+<option value="java/1998-11">Nov 1998
+<option value="java/1998-10">Oct 1998
+<option value="java/1998-09">Sep 1998
+</select></td>
+<td><select name=restrict multiple size=6>
+<option value="java-patches/2001-q1">Jan-Mar 2001
+<option value="java-patches/2000-q4">Oct-Dec 2000
+<option value="java-patches/2000-q3">Jul-Sep 2000
+<option value="java-patches/2000-q2">Apr-Jun 2000
+<option value="java-patches/2000-q1">Jan-Mar 2000
+<option value="java-patches/1999-q4">Oct-Dec 1999
+<option value="java-patches/1999-q3">Jul-Sep 1999
+<option value="java-patches/1999-q2">Apr-Jun 1999
+</select></td>
+<td><select name=restrict multiple size=6>
+<option value="java-prs/2001-q1">Jan-Mar 2001
+<option value="java-prs/2000-q4">Oct-Dec 2000
+<option value="java-prs/2000-q3">Jul-Sep 2000
+<option value="java-prs/2000-q2">Apr-Jun 2000
+<option value="java-prs/2000-q1">Jan-Mar 2000
+<option value="java-prs/1999-q4">Oct-Dec 1999
+<option value="java-prs/1999-q3">Jul-Sep 1999
+</select></td>
+<td><select name=restrict multiple size=6>
+<option value="java-announce/2001">2001
+<option value="java-announce/2000">2000
+<option value="java-announce/1999">1999
 </select></td>
 </tr>
 </table>
