--- a/htdocs/releases.html
+++ b/htdocs/releases.html
@@ -144,6 +144,25 @@ Numbers in parentheses are EGCS release numbers. </p>
 <tr><td>1.19</td><td>March 29, 1988</td></tr>
 <tr><td>1.18</td><td>February 4, 1988</td></tr>
 <tr><td>1.17</td><td>January 9, 1988</td></tr>
+<tr><td>1.16</td><td>December 19, 1987</td></tr>
+<tr><td>1.15.3 (g++)</td><td>December 18, 1987</td></tr>
+<tr><td>1.15</td><td>November 28, 1987</td></tr>
+<tr><td>1.14</td><td>November 6, 1987</td></tr>
+<tr><td>1.13</td><td>October 12, 1987</td></tr>
+<tr><td>1.12</td><td>October 3, 1987</td></tr>
+<tr><td>1.11</td><td>September 5, 1987 (announced late)</td></tr>
+<tr><td>1.10</td><td>August 22, 1987</td></tr>
+<tr><td>1.9</td><td>August 18, 1987 (never announced)</td></tr>
+<tr><td>1.8</td><td>August 10, 1987</td></tr>
+<tr><td>1.7</td><td>July 21, 1987</td></tr>
+<tr><td>1.6</td><td>July 2, 1987</td></tr>
+<tr><td>1.5</td><td>June 18, 1987</td></tr>
+<tr><td>1.4</td><td>June 13, 1987</td></tr>
+<tr><td>1.3</td><td>June 10, 1987</td></tr>
+<tr><td>1.2</td><td>June 1, 1987</td></tr>
+<tr><td>1.1</td><td>May 24, 1987</td></tr>
+<tr><td>1.0</td><td>May 23, 1987</td></tr>
+<tr><td>0.9 (first beta release)</td><td>March 22, 1987</td></tr>
 
 </table>
 
