* index.html: Added news item on mods for regression highlighting 	in the library via recent Mauve mods.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -64,6 +64,17 @@ href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.
 
 <table>
 <tr><td valign="top">
+<b>February 8, 2001</b>
+</td><td>
+Made use of Warren Levy's change to the Mauve testsuite to handle regressions.
+Modifications have been made to <tt>mauve.exp</tt> to copy the newly created
+<tt>xfails</tt> file of known library failures from the source tree
+to the directory where the libjava <tt>'make check'</tt> is being run.  
+This allows the testsuite to ignore <tt>XFAILS</tt> and thus highlight
+true regressions in the library.
+</td></tr>
+
+<tr><td valign="top">
 <b>January 28, 2001</b>
 </td><td>
 The various gcj mailing lists have moved to gcc.gnu.org.
