* index.html: Fixed a formatting typo.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -70,7 +70,7 @@ Made use of Warren Levy's change to the Mauve testsuite to handle regressions.
 Modifications have been made to <tt>mauve.exp</tt> to copy the newly created
 <tt>xfails</tt> file of known library failures from the source tree
 to the directory where the libjava <tt>'make check'</tt> is being run.  
-This allows the testsuite to ignore <tt>XFAILS</tt> and thus highlight
+This allows the testsuite to ignore <tt>XFAILs</tt> and thus highlight
 true regressions in the library.
 </td></tr>
 
