Give proper attribution for the integration of the GCJ mailing lists and web pages. Mention our search-engine wizard.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -154,10 +154,16 @@ hope to release by the end of Q1 2001.
 
 <dl>
 
+<dt><b>February 12, 2001</b></dt>
+<dd>
+Hans-Peter Nilsson, our search-engine wizard, tweaked the search-engine to
+include all mailing lists (including libstdc++ and GCJ). 
+</dd>
+
 <dt><b>January 28, 2001</b></dt>
 <dd>
-The Java mailing lists and web pages have been moved to gcc.gnu.org.
-Now the gcj project is fully integrated into GCC.
+Tom Tromey has moved the Java mailing lists and web pages to gcc.gnu.org.
+Now the GCJ project is fully integrated into GCC.
 </dd>
 
 <dt><b>January 21, 2001</b></dt>
