--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -156,7 +156,7 @@ hope to release by the end of Q1 2001.
 
 <dt><b>February 12, 2001</b></dt>
 <dd>
-Hans-Peter Nilsson, our search-engine wizard, tweaked the search-engine to
+Hans-Peter Nilsson, our search-engine volunteer, tweaked the search-engine to
 include all mailing lists (including libstdc++ and GCJ). 
 </dd>
 
