Announce the GCC 3.0 branch; refer to the guidelines for the branch.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -156,6 +156,14 @@ hope to release by the end of Q1 2001.
 
 <dt><b>February 12, 2001</b></dt>
 <dd>
+Our CVS tree has branched for the GCC 3.0 release process and Mark Mitchell,
+our release manager, has provided some <a
+href="http://gcc.gnu.org/ml/gcc/2001-02/msg00403.html">guidelines for the
+GCC 3.0 branch</a>.
+</dd>
+
+<dt><b>February 12, 2001</b></dt>
+<dd>
 Hans-Peter Nilsson, our search-engine volunteer, tweaked the search-engine to
 include all mailing lists (including libstdc++ and GCJ). 
 </dd>
